// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiLinkButton Baseline is rendered 1`] = `
<a
  class="kuiButton"
>
  <span />
</a>
`;

exports[`KuiLinkButton HTML attributes aria-label is rendered 1`] = `
<a
  aria-label="aria label"
  class="kuiButton"
>
  <span />
</a>
`;

exports[`KuiLinkButton HTML attributes className renders the classes 1`] = `
<a
  class="kuiButton testClass1 testClass2"
>
  <span />
</a>
`;

exports[`KuiLinkButton HTML attributes data-test-subj is rendered 1`] = `
<a
  class="kuiButton"
  data-test-subj="test subject string"
>
  <span />
</a>
`;

exports[`KuiLinkButton HTML attributes disabled sets the disabled class 1`] = `
<a
  class="kuiButton kuiButton-isDisabled"
>
  <span />
</a>
`;

exports[`KuiLinkButton HTML attributes href is rendered 1`] = `
<a
  class="kuiButton"
  href="#"
>
  <span />
</a>
`;

exports[`KuiLinkButton HTML attributes target is rendered 1`] = `
<a
  class="kuiButton"
  target="_blank"
>
  <span />
</a>
`;

exports[`KuiLinkButton Props children is rendered 1`] = `
<a
  class="kuiButton"
>
  <span>
    <span>
      Hello
    </span>
  </span>
</a>
`;

exports[`KuiLinkButton Props icon is rendered with children 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span>
    Icon
    <span>
      Hello
    </span>
  </span>
</a>
`;

exports[`KuiLinkButton Props icon is rendered without children 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span>
    Icon
  </span>
</a>
`;

exports[`KuiLinkButton Props iconPosition moves the icon to the right 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span>
    <span>
      Hello
    </span>
    Icon
  </span>
</a>
`;

exports[`KuiLinkButton Props isLoading doesn't render the icon prop 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span>
    <span
      class="kuiButton__icon kuiIcon fa-spinner fa-spin"
    />
  </span>
</a>
`;

exports[`KuiLinkButton Props isLoading renders a spinner 1`] = `
<a
  class="kuiButton kuiButton--iconText"
>
  <span>
    <span
      class="kuiButton__icon kuiIcon fa-spinner fa-spin"
    />
  </span>
</a>
`;

exports[`KuiLinkButton Props type basic renders the basic class 1`] = `
<a
  class="kuiButton kuiButton--basic"
>
  <span />
</a>
`;

exports[`KuiLinkButton Props type danger renders the danger class 1`] = `
<a
  class="kuiButton kuiButton--danger"
>
  <span />
</a>
`;

exports[`KuiLinkButton Props type hollow renders the hollow class 1`] = `
<a
  class="kuiButton kuiButton--hollow"
>
  <span />
</a>
`;

exports[`KuiLinkButton Props type primary renders the primary class 1`] = `
<a
  class="kuiButton kuiButton--primary"
>
  <span />
</a>
`;
